// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Todos Component displays duties after fetching 1`] = `
<div>
  <div
    id="todos"
  >
    <h3>
      NEX TODO
    </h3>
    <ul
      class="list"
    >
      <li
        class=""
      >
        <div
          class="item"
        >
          <label
            class="ant-checkbox-wrapper css-dev-only-do-not-override-1uq9j6g"
            style="margin-right: 8px;"
          >
            <span
              class="ant-checkbox ant-wave-target css-dev-only-do-not-override-1uq9j6g"
            >
              <input
                class="ant-checkbox-input"
                type="checkbox"
              />
              <span
                class="ant-checkbox-inner"
              />
            </span>
          </label>
          <span
            style="flex: 1;"
          >
            <span>
              Duty 1
            </span>
          </span>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-text ant-btn-icon-only"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="delete"
                class="anticon anticon-delete"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="delete"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
      </li>
      <li
        class="is-completed"
      >
        <div
          class="item"
        >
          <label
            class="ant-checkbox-wrapper ant-checkbox-wrapper-checked css-dev-only-do-not-override-1uq9j6g"
            style="margin-right: 8px;"
          >
            <span
              class="ant-checkbox ant-wave-target css-dev-only-do-not-override-1uq9j6g ant-checkbox-checked"
            >
              <input
                checked=""
                class="ant-checkbox-input"
                type="checkbox"
              />
              <span
                class="ant-checkbox-inner"
              />
            </span>
          </label>
          <span
            style="flex: 1;"
          >
            <span>
              Duty 2
            </span>
          </span>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-text ant-btn-icon-only"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="delete"
                class="anticon anticon-delete"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="delete"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
      </li>
    </ul>
    <div
      class="add-item"
    >
      <span
        aria-label="plus"
        class="anticon anticon-plus"
        role="img"
        style="margin-right: 6px;"
      >
        <svg
          aria-hidden="true"
          data-icon="plus"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
          />
          <path
            d="M192 474h672q8 0 8 8v60q0 8-8 8H160q-8 0-8-8v-60q0-8 8-8z"
          />
        </svg>
      </span>
      <span>
        Add a new item
      </span>
    </div>
  </div>
</div>
`;

exports[`Todos Component displays error message if fetching duties fails 1`] = `
<div>
  <div
    role="alert"
  >
    Failed to load duties
  </div>
</div>
`;

exports[`Todos Component displays loading spinner while fetching duties 1`] = `
<div>
  <div
    role="alert"
  >
    <div
      aria-busy="true"
      aria-live="polite"
      class="ant-spin ant-spin-spinning css-dev-only-do-not-override-1uq9j6g"
    >
      <span
        class="ant-spin-dot-holder"
      >
        <span
          class="ant-spin-dot ant-spin-dot-spin"
        >
          <i
            class="ant-spin-dot-item"
          />
          <i
            class="ant-spin-dot-item"
          />
          <i
            class="ant-spin-dot-item"
          />
          <i
            class="ant-spin-dot-item"
          />
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Todos Component renders AddItem component 1`] = `
<div>
  <div
    id="todos"
  >
    <h3>
      NEX TODO
    </h3>
    <ul
      class="list"
    >
      <li
        class=""
      >
        <div
          class="item"
        >
          <label
            class="ant-checkbox-wrapper css-dev-only-do-not-override-1uq9j6g"
            style="margin-right: 8px;"
          >
            <span
              class="ant-checkbox ant-wave-target css-dev-only-do-not-override-1uq9j6g"
            >
              <input
                class="ant-checkbox-input"
                type="checkbox"
              />
              <span
                class="ant-checkbox-inner"
              />
            </span>
          </label>
          <span
            style="flex: 1;"
          >
            <span>
              Duty 1
            </span>
          </span>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-text ant-btn-icon-only"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="delete"
                class="anticon anticon-delete"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="delete"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
      </li>
      <li
        class="is-completed"
      >
        <div
          class="item"
        >
          <label
            class="ant-checkbox-wrapper ant-checkbox-wrapper-checked css-dev-only-do-not-override-1uq9j6g"
            style="margin-right: 8px;"
          >
            <span
              class="ant-checkbox ant-wave-target css-dev-only-do-not-override-1uq9j6g ant-checkbox-checked"
            >
              <input
                checked=""
                class="ant-checkbox-input"
                type="checkbox"
              />
              <span
                class="ant-checkbox-inner"
              />
            </span>
          </label>
          <span
            style="flex: 1;"
          >
            <span>
              Duty 2
            </span>
          </span>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-text ant-btn-icon-only"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="delete"
                class="anticon anticon-delete"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="delete"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
      </li>
    </ul>
    <div
      class="add-item"
    >
      <span
        aria-label="plus"
        class="anticon anticon-plus"
        role="img"
        style="margin-right: 6px;"
      >
        <svg
          aria-hidden="true"
          data-icon="plus"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
          />
          <path
            d="M192 474h672q8 0 8 8v60q0 8-8 8H160q-8 0-8-8v-60q0-8 8-8z"
          />
        </svg>
      </span>
      <span>
        Add a new item
      </span>
    </div>
  </div>
</div>
`;

exports[`Todos Component renders Todos component 1`] = `
<div>
  <div
    id="todos"
  >
    <h3>
      NEX TODO
    </h3>
    <ul
      class="list"
    >
      <li
        class=""
      >
        <div
          class="item"
        >
          <label
            class="ant-checkbox-wrapper css-dev-only-do-not-override-1uq9j6g"
            style="margin-right: 8px;"
          >
            <span
              class="ant-checkbox ant-wave-target css-dev-only-do-not-override-1uq9j6g"
            >
              <input
                class="ant-checkbox-input"
                type="checkbox"
              />
              <span
                class="ant-checkbox-inner"
              />
            </span>
          </label>
          <span
            style="flex: 1;"
          >
            <span>
              Duty 1
            </span>
          </span>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-text ant-btn-icon-only"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="delete"
                class="anticon anticon-delete"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="delete"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
      </li>
      <li
        class="is-completed"
      >
        <div
          class="item"
        >
          <label
            class="ant-checkbox-wrapper ant-checkbox-wrapper-checked css-dev-only-do-not-override-1uq9j6g"
            style="margin-right: 8px;"
          >
            <span
              class="ant-checkbox ant-wave-target css-dev-only-do-not-override-1uq9j6g ant-checkbox-checked"
            >
              <input
                checked=""
                class="ant-checkbox-input"
                type="checkbox"
              />
              <span
                class="ant-checkbox-inner"
              />
            </span>
          </label>
          <span
            style="flex: 1;"
          >
            <span>
              Duty 2
            </span>
          </span>
          <button
            class="ant-btn css-dev-only-do-not-override-1uq9j6g ant-btn-text ant-btn-icon-only"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="delete"
                class="anticon anticon-delete"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="delete"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
      </li>
    </ul>
    <div
      class="add-item"
    >
      <span
        aria-label="plus"
        class="anticon anticon-plus"
        role="img"
        style="margin-right: 6px;"
      >
        <svg
          aria-hidden="true"
          data-icon="plus"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
          />
          <path
            d="M192 474h672q8 0 8 8v60q0 8-8 8H160q-8 0-8-8v-60q0-8 8-8z"
          />
        </svg>
      </span>
      <span>
        Add a new item
      </span>
    </div>
  </div>
</div>
`;
